Removed phone number

--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
                             <li>
                                 <h2 class="lang-es">Teléfonos</h2>
                                 <h2 class="lang-en">Phone</h2>
-                                <a href="tel:+584246581662" target="_blank" class="roll-link"><span data-title="+58 424 658 16 62">+58 424 658 16 62</span></a> 
+                                <!-- <a href="tel:+584246581662" target="_blank" class="roll-link"><span data-title="+58 424 658 16 62">+58 424 658 16 62</span></a>  -->
                                 <a href="tel:+584120701808" target="_blank" class="roll-link"><span data-title="+58 412 070 18 08">+58 412 070 18 08</span></a>
                                 
                             </li>
